# 2020-phd-ruben-lucas

./: .gitignore  CHANGELOG.md  Gemfile  README.md  _config.yml
RL_Unibotics/RL-Studio/robot_mesh/: CMakeLists.txt  package.xml
RL_Unibotics/RL-Studio/robot_mesh/agents/: qlearn_template.py  runner.py  settings.py  utils.py
RL_Unibotics/RL-Studio/robot_mesh/agents/envs/: __init__.py  gazebo_envs.py  robot_mesh_position_env.py
RL_Unibotics/RL-Studio/robot_mesh/agents/logs/qlearn_models/: 1_20210728_0850_act_set_simple_epsilon_0.05_QTABLE.pkl  1_20220107_1129_act_set_simple_epsilon_0.05_QTABLE.pkl  2_20210726_2340_act_set_simple_epsilon_0.05_STATES_COUNTER.pkl  2_20220107_1129_act_set_simple_epsilon_0.05_STATES_COUNTER.pkl  3_20220107_1129_act_set_simple_epsilon_0.05_STATES_CUM_REWARD.pkl  4_20210728_0850_act_set_simple_epsilon_0.05_STATES_STEPS.pkl  4_20220107_1129_act_set_simple_epsilon_0.05_STATES_STEPS.pkl
RL_Unibotics/RL-Studio/robot_mesh/agents/logs/robot_mesh_experiments/: openaigym.episode_batch.0.13602.stats.json  openaigym.episode_batch.0.16395.stats.json  openaigym.episode_batch.0.2182137.stats.json  openaigym.episode_batch.0.46265.stats.json  openaigym.episode_batch.0.9079.stats.json  openaigym.manifest.0.13602.manifest.json  openaigym.manifest.0.16395.manifest.json  openaigym.manifest.0.2182137.manifest.json  openaigym.manifest.0.46265.manifest.json  openaigym.manifest.0.9079.manifest.json
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/: .catkin  setup.sh
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/lib/pkgconfig/: catkin_simple.pc  combined_robot_hw.pc  controller_interface.pc  controller_manager_msgs.pc  create_description.pc  create_driver.pc  ecl_build.pc  ecl_command_line.pc  ecl_concepts.pc  ecl_config.pc  ecl_console.pc  ecl_containers.pc  ecl_converters.pc  ecl_converters_lite.pc  ecl_core_apps.pc  ecl_devices.pc  ecl_eigen.pc  ecl_errors.pc  ecl_exceptions.pc  ecl_filesystem.pc  ecl_formatters.pc  ecl_geometry.pc  ecl_io.pc  ecl_ipc.pc  ecl_license.pc  ecl_linear_algebra.pc  ecl_math.pc  ecl_mobile_robot.pc  ecl_mpl.pc  ecl_sigslots.pc  ecl_sigslots_lite.pc  ecl_statistics.pc  ecl_streams.pc  ecl_threads.pc  ecl_time.pc  ecl_time_lite.pc  ecl_type_traits.pc  ecl_utilities.pc  gazebo_dev.pc  hardware_interface.pc  (+8 more)
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/lib/rqt_controller_manager/: rqt_controller_manager
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/catkin_simple/cmake/: catkin_simple-extras.cmake  catkin_simpleConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/combined_robot_hw/cmake/: combined_robot_hwConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/controller_interface/cmake/: controller_interfaceConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/controller_manager_msgs/cmake/: controller_manager_msgs-msg-paths.cmake  controller_manager_msgsConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/create_description/cmake/: create_descriptionConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/create_driver/cmake/: create_driverConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/ecl_build/cmake/: ecl_buildConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/ecl_command_line/cmake/: ecl_command_lineConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/ecl_concepts/cmake/: ecl_conceptsConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/ecl_config/cmake/: ecl_configConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/ecl_console/cmake/: ecl_consoleConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/ecl_containers/cmake/: ecl_containersConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/ecl_converters/cmake/: ecl_convertersConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/ecl_converters_lite/cmake/: ecl_converters_liteConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/ecl_core_apps/cmake/: ecl_core_appsConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/ecl_devices/cmake/: ecl_devicesConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/ecl_eigen/cmake/: ecl_eigenConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/ecl_errors/cmake/: ecl_errorsConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/ecl_exceptions/cmake/: ecl_exceptionsConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/ecl_filesystem/cmake/: ecl_filesystemConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/ecl_formatters/cmake/: ecl_formattersConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/ecl_geometry/cmake/: ecl_geometryConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/ecl_io/cmake/: ecl_ioConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/ecl_ipc/cmake/: ecl_ipcConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/ecl_license/cmake/: ecl_licenseConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/ecl_linear_algebra/cmake/: ecl_linear_algebraConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/ecl_math/cmake/: ecl_mathConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/ecl_mobile_robot/cmake/: ecl_mobile_robotConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/installation/catkin_ws/devel/share/ecl_mpl/cmake/: ecl_mplConfig.cmake
RL_Unibotics/RL-Studio/robot_mesh/launch/: rviz.launch
RL_Unibotics/RL-Studio/robot_mesh/model/maze/: old_model.sdf
_pages/: home.md
(+1739 files in other folders)
